--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@ doc <!DOCTYPE html>
 </head>
 <body>
     hello world 
+    <div> My books: </div>
+    <li> <a href="chapter1.html"> Chapter 1</a></li>
 </body>
 </html>
